# jomiel-yomiel

./: .flake8  .gitignore  .pre-commit-config.yaml  .style.yapf  CHANGELOG.md  CHANGES.md  MANIFEST.in  NOTICE  README.md  __init__.py  app.py  error.py  file.py  input.py  log.py  package.json  path.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  sig.py  tox.ini  version.py  yomiel.yaml
auth/: __init__.py  curve.py
proto/: README.md  Status.proto
proto/jomiel/protobuf/v1alpha1/: media.proto  status.proto
setup/: __init__.py  cmd.py  echo.py  file.py  proto.py
src/yomiel/: __main__.py  app.py
src/yomiel/comm/: README.md  pyproject.toml
src/yomiel/kore/: .pre-commit-config.yaml  pyproject.toml
src/yomiel/subsys/: log.py
yomiel/: __init__.py  __main__.py  app.py  log.py
yomiel/comm/: .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml
yomiel/comm/auth/: __init__.py  curve.py  ssh.py
yomiel/comm/proto/: Media.proto  Message.proto  README.md  buf.yaml
yomiel/comm/proto/jomiel/protobuf/v1alpha1/: message.proto
yomiel/config/: yomiel.yaml
yomiel/config/logger/: yomiel.yaml
yomiel/kore/: README.md  app.py  error.py  file.py  formatter.py  input.py  opts.py  path.py  sig.py  version.py
yomiel/kore/examples/logger/: jomiel.yaml
yomiel/kore/setup/: __init__.py  cmd.py  echo.py  file.py  proto.py  version.py
yomiel/subsys/: __init__.py  log.py
