[build-system]
requires = [
    "setuptools >= 42.0.1",
    "setuptools_scm >= 3.3.3, <4",
    "wheel >= 0.33.6",
]
build-backend = 'setuptools.build_meta'

[tool.black]
target-version = ['py38']
line-length = 72
exclude = '''
(
    /(
        \.eggs
        \.git
        build
        dist
    )/
)
'''
