[metadata]
name = yomiel
url = https://github.com/guendto/jomiel-yomiel

author = Toni Gündoğdu
author_email = 47444442+guendto@users.noreply.github.com

description = Pretty printer for jomiel messages
long_description_content_type = text/markdown
long_description = file: README.md

license = Apache2.0
platforms = any

# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir = =src
include_package_data = true
python_requires = >=3.6
install_requires =
    jomiel-comm
    jomiel-kore
zip_safe = true

# [options.extras_require]
# dev =
#   ...

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    yomiel = yomiel.__main__:main

[bdist_wheel]
# universal
# 0 = "Python 3 only" package
# 1 = "Python 2 and 3 compatible"
#
universal = 0
